[package]
name = "hexgate-extract"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
reqwest = "0.13.4"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.150"
slint = "1.16"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
hexgate-rs={path = "F://hexgate//hexgate-rs"}
bytes = "1.12.0"
regex = "1.12.4"
zstd = "0.13.3"
[build-dependencies]
slint-build = "1.16"
